corrección de kitten

--- a/index.html
+++ b/index.html
@@ -1,39 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kittens</title>
-    <link rel="stylesheet" href="css/main.css"> 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="assets/icon/cat.png">
+  <link rel="stylesheet" href="css/main.css">
+  <title> Kitten </title>
 </head>
+
 <body>
-    <h1>Kitten day</h1>
-    <div class="row">
-        <div class="container">
-        <section class="day back-image">
-            <div class="cat uno">
-                <img src="assets/img/kitten-medium.png" alt="">
-            </div>
-        </section>
-
-        </div>
-        <div class="container">
-         <section class="dawn back-image">
-            <div class="cat dos">
-                 <img src="assets/img/kitten-large.png" alt="">
-            </div>
-        </section>
-        </div>
-       <div class="container">
-         <section class="night back-image">
-            <div class="cat tres">
-            <img src="assets/img/kitten-small.png" alt="">
-            </div>
-        </section> 
-       </div>
-
+  <section class="cover-mobile small">
+    <div class="flex-container" >
+      <img src="assets/img/kitten-large.png" class="kitten" alt="">
     </div>
-    
+  </section> 
+  <section class="cover-tablet medium">
+    <div class="flex-container" >
+      <img src="assets/img/kitten-small.png" class="kitten" alt="">
+    </div>
+  </section>  
+  <section class="cover-desktop large">
+    <div class="flex-container" >
+      <img src="assets/img/kitten-medium.png" class="kitten" alt="">
+    </div>
+  </section>
+
 </body>
+
 </html>
